# agent-arb

./: .dockerignore  .gitignore  AGENTS.md  AGENT_IDENTITY.md  AUTONOMOUS_AGENT.md  Anchor.toml  CLAIM_INFO.md  COLOSSEUM_SKILL.md  DEPLOY_STATUS.md  DESIGN.md  Dockerfile  NEXT_STEPS.md  PERSONA.md  README.md  docker-compose.yml  package.json  render.yaml
agent/: AGENTWALLET_SKILL.md  APP_DEVNET_CHECKLIST.md  BUNNY_DEPLOY.md  CLOUDFLARE_WORKER.md  TWEET_FORMAT.md  agent-context.example.json  agent-context.json  clawkey-register.js  faucet.js  forum-check.js  forum-comment.cjs  forum-comment.js  fund-deploy-keypair.js  heartbeat-loop.js  heartbeat.js  init-arena.js  instructions.js  instructions.test.js  package-lock.json  package.json  poll-respond.js  post-comment-from-file.cjs  post-comment.cjs  post-comment.js  post-to-x.js  run-loop.js  run.js  status.js  tweet-draft.txt
app/: README.md  package-lock.json  package.json  server.js
docs/: CURSOR_CLI_HEADLESS.md
programs/agent_arena/: Cargo.toml
programs/agent_arena/src/: lib.rs
scripts/: agent-runner.js  agent-runner.ps1  create-colosseum-project.ps1  deploy-devnet-then-run.ps1  docker-build.ps1  docker-deploy-devnet.ps1  docker-sync-keys-deploy-devnet.ps1  docker-test.ps1  forum-post-body.json  forum-post-complete.json  forum-post-devnet-invite.json  forum-post-retry.json  forum-replies.md  forum-reply-1870-agentpulse.json  forum-reply-1870-neptu.json  forum-reply-1874-casino.json  forum-reply-1874-mereum.json  forum-reply-1874.json  git-env-filter-agent-identity.sh  tweet-devnet-invite.txt  (+3 more)
(+10 files in other folders)
