[package]
name = "agent_arena"
version = "0.1.0"
description = "Agent Arena: autonomous on-chain duels. Only the agent can submit moves."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_arena"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
